provider manager added ..

--- a/src/main/webapp/view/index.xhtml
+++ b/src/main/webapp/view/index.xhtml
@@ -12,7 +12,9 @@
     </h:head>
     <h:body>
         <h2>e-Mefana Home</h2>
-        <p> <h:link outcome = "form1.xhtml">form1</h:link> </p>
+        <h:link outcome = "form1.xhtml">form1</h:link>
+        <br />
+        <h:link outcome = "providers.xhtml">Manage Providers</h:link>
     </h:body>
 </f:view>
 </html>
