--- a/src/main/webapp/view/form1.xhtml
+++ b/src/main/webapp/view/form1.xhtml
@@ -6,10 +6,10 @@
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:f="http://xmlns.jcp.org/jsf/core"
       xmlns:p="http://primefaces.org/ui">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1" />
-<title>emefana Sample Form1</title>
-</head>
+<f:view>
+<h:head>
+	<title>emefana Sample Form1</title>
+</h:head>
 	<h:body>
 		<h:form>
 		    <p:panel id="panel" header="Sample Form1" style="margin-bottom:10px;">
@@ -35,5 +35,5 @@
 		 
 		  </h:form>
 	</h:body> 
-		
+</f:view>		
 </html>
