provider service json reader first pass

--- a/src/main/webapp/view/index.xhtml
+++ b/src/main/webapp/view/index.xhtml
@@ -12,9 +12,11 @@
     </h:head>
     <h:body>
         <h2>e-Mefana Home</h2>
-        <h:link outcome = "form1.xhtml">form1</h:link>
+        <h:link outcome = "form1.xhtml">Sample form1</h:link>
         <br />
         <h:link outcome = "providers.xhtml">Manage Providers</h:link>
+        <br />
+        
     </h:body>
 </f:view>
 </html>
